<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabOneActivity">

    <TextView
        android:id="@+id/x_coordinate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_param"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/container_parameters"
        app:layout_constraintEnd_toStartOf="@id/x_coordinate_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/x_coordinate_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/container_parameters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/x_coordinate_label"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x_coordinate_label">

        <TextView
            android:id="@+id/a_parameter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_param"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/a_parameter_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/b_parameter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_param"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/b_parameter_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/c_parameter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_param"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/c_parameter_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/d_parameter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_param"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/d_parameter_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:textSize="25sp" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_parameters" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart" />

</androidx.constraintlayout.widget.ConstraintLayout>